[gd_scene load_steps=5 format=3 uid="uid://vwukubufgrdg"]

[ext_resource type="Script" path="res://scripts/turret_projectile.gd" id="1_fekc4"]
[ext_resource type="Texture2D" uid="uid://06ld21mvqruc" path="res://icon.svg" id="1_uu2ej"]
[ext_resource type="Script" path="res://scenes/collision_shape_2d.gd" id="3_8mfyr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qcsl4"]
radius = 7.07107

[node name="Turret_Projectile" type="Node2D" groups=["enemy"]]
script = ExtResource("1_fekc4")
speed = 150.0
lifetime = 10.0
damage_amount = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.12, 0.12)
texture = ExtResource("1_uu2ej")

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qcsl4")
script = ExtResource("3_8mfyr")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
